<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="10dp"
    android:weightSum="15"
    tools:context=".CalibaRatan">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:gravity="left"
        android:paddingLeft="35dp"
        android:text="@string/calibration_title"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infotext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/calibration_info1"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/infotext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/calibration_info2"
        android:textColor="#000000" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"

        android:outlineProvider="background">




        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:src="@drawable/white_heart" />
    </FrameLayout>
    <VideoView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <TextView
        android:id="@+id/progressMsg"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2"

        android:gravity="center"
        android:text="Signal strength is Poor:("
        android:textColor="#000000" />

    <TextView
        android:id="@+id/statusMsg"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text=""
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/warningMsg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:gravity="center"
        android:text="@string/warning_msg"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/group_login"
        android:gravity="right"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/skip"
            android:text="@string/back_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>